# makedepend

./: .gitignore  ChangeLog  LICENSE  Makefile.am  Makefile.cygwin  _cmd.bat  build.bat  configure.ac  cppsetup.c  def.h  ifparser.c  ifparser.h  imakemdep.h  include.c  main.c  makedepend.man  parse.c  pr.c
